# gpio

./: .gitignore  Makefile  README.md  pi  pyproject.toml
abstract/: abstract.h
abstract/gpio/: gpio.h  gpio_pi5.c
abstract/sdk/: sdk.h  sdk_pi5.c
led/: CMakeLists.txt  led.h  main.c  opt.c
pi5/: Makefile
pi5/abstract/: abstract.c  abstract.h
pi5/tools/joystick/: joystick.c  joystick.h
pi5/tools/led/: led.c  led.h
pi5/tools/tasks/: tasks.c  tasks.h
pico/: Makefile
pico/led/: CMakeLists.txt
